main-nav: tablet-width

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,41 +13,39 @@
 
   <header class="header header--gray">
 
-    <div class="header__nav-wrapper">
-      <nav class="header__nav main-nav">
-        <a href="index.html" class="main-nav__item main-nav__item--logo header__logo">
-          <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
-        </a>
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
-          <li class="main-nav__item">
-            <a href="catalog.html">Каталог товаров</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="form.html">Вязание на заказ</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list main-nav__list--search-checkout">
-          <li class="main-nav__item">
-            <a href="#">Поиск по сайту</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#">Корзина: пока пуста</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list main-nav__list--arrivals-sale">
-          <li class="main-nav__item">
-            <a href="#">Новые поступления</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Распродажа</a>
-          </li>
-        </ul>
-        <span class="main-nav__item main-nav__item--free-shipping">
-          Бесплатная доставка по России
-        </span>
 
-      </nav>
+    <div class="main-nav">
+      <a class="main-nav__logo header__logo">
+        <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+      </a>
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list main-nav__list--catalog-form">
+        <li class="main-nav__item">
+          <a href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="form.html">Вязание на заказ</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list main-nav__list--search-checkout">
+        <li class="main-nav__item">
+          <a href="#">Поиск по сайту</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">Корзина: пока пуста</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list main-nav__list--arrivals-sale">
+        <li class="main-nav__item">
+          <a href="#">Новые поступления</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="">Распродажа</a>
+        </li>
+      </ul>
+      <span class="main-nav__item main-nav__item--free-shipping">
+        Бесплатная доставка по России
+      </span>
     </div>
 
     <h1 class="header__title">Каталог товаров</h1>
