--- a/source/index.html
+++ b/source/index.html
@@ -13,12 +13,13 @@
 <body class="page-index">
 
   <header class="header header--hero">
+
     <div class="main-nav">
       <a class="main-nav__logo header__logo">
         <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
       </a>
       <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <ul class="main-nav__list main-nav__list main-nav__list--catalog-form">
+      <ul class="main-nav__list main-nav__list--catalog-form">
         <li class="main-nav__item">
           <a href="catalog.html">Каталог товаров</a>
         </li>
