product-of-week: tablet

--- a/source/index.html
+++ b/source/index.html
@@ -72,43 +72,43 @@
         </h2>
         <b class="product-of-week__subtitle">Товар недели</b>
       </div>
-      <p class="product-of-week__description">
-        Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
-      </p>
-      <table class="product-of-week__characteristics product-characteristics">
-        <tr>
-          <td class="product-characteristics__title">
-            Цвет:
-          </td>
-          <td class="product-characteristics__value">
-            «Тиффани»/серый
-          </td>
-        </tr>
-        <tr>
-          <td class="product-characteristics__title">
-            Диаметр:
-          </td>
-          <td class="product-characteristics__value">
-            25 см
-          </td>
-        </tr>
-        <tr>
-          <td class="product-characteristics__title">
-            Высота:
-          </td>
-          <td class="product-characteristics__value">
-            15 см
-          </td>
-        </tr>
-      </table>
-      <div class="product-of-week__image-wrapper">
+      <div class="product-of-week__content-wrapper">
+        <p class="product-of-week__description">
+          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.
+        </p>
+        <table cell class="product-of-week__stats product-stats">
+          <tr>
+            <td class="product-stats__title">
+              Цвет:
+            </td>
+            <td class="product-stats__value">
+              «Тиффани»/серый
+            </td>
+          </tr>
+          <tr>
+            <td class="product-stats__title">
+              Диаметр:
+            </td>
+            <td class="product-stats__value">
+              25 см
+            </td>
+          </tr>
+          <tr>
+            <td class="product-stats__title">
+              Высота:
+            </td>
+            <td class="product-stats__value">
+              15 см
+            </td>
+          </tr>
+        </table>
         <img src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели"
           class="product-of-week__image">
+        <span class="product-of-week__price">
+          Цена: 990 руб.
+        </span>
+        <a class="product-of-week__buy button" href="form.html">Заказать</a>
       </div>
-      <span class="product-of-week__price">
-        Цена: 990 руб.
-      </span>
-      <a class="product-of-week__buy button" href="form.html">Заказать</a>
     </article>
 
     <section class="features">
