product-of-week: tablet + desktop

--- a/source/index.html
+++ b/source/index.html
@@ -102,8 +102,10 @@
             </td>
           </tr>
         </table>
+        <!-- <div class="product-of-week__image-wrapper"> -->
         <img src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели"
           class="product-of-week__image">
+        <!-- </div> -->
         <span class="product-of-week__price">
           Цена: 990 руб.
         </span>
