--- a/source/index.html
+++ b/source/index.html
@@ -120,25 +120,12 @@
       </h2>
 
       <ul class="features__list">
-        <li class="features__item features__item--eco">
-          <span class="features__text">Экологически чистые материалы</span>
-        </li>
-        <li class="features__item features__item--scandinavian">
-          <span class="features__text">Скандинавский стиль по российской цене</span>
-        </li>
-        <li class="features__item features__item--likes">
-          <span class="features__text">Увеличивает лайки на фотографиях</span>
-        </li>
-        <li class="features__item features__item--handmade">
-          <span class="features__text">Связано вручную с любовью и умилением</span>
-        </li>
-        <li class="features__item features__item--local-support">
-          <span class="features__text">Поддержка отечественного производителя</span>
-        </li>
-        <li class="features__item features__item--packing">
-          <span class="features__text">Поставляется в подарочной упаковке</span>
-        </li>
-
+        <li class="features__item features__item--eco">Экологически чистые материалы</li>
+        <li class="features__item features__item--scandinavian">Скандинавский стиль по российской цене</li>
+        <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
+        <li class="features__item features__item--handmade">Связано вручную с любовью и умилением</li>
+        <li class="features__item features__item--local-support">Поддержка отечественного производителя</li>
+        <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
       </ul>
 
     </section>
@@ -212,9 +199,7 @@
         </iframe>
       </div>
 
-      <div class="contacts__button-wrapper">
-        <a href="#" class="contacts__write-us button button--center">Напишите нам</a>
-      </div>
+      <a href="#" class="contacts__write-us button button--center">Напишите нам</a>
     </section>
   </main>
 
