npm test style lint fix

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -59,10 +59,9 @@
 
         <li class="products-list__item product-card">
 
-          <div class="product-card__image-wrapper">
-            <img class="product-card__image" width="260" height="195" src="./img/photo-hare-mobile@1x.jpg"
-              alt="Зайчик-попрыгайчик">
-          </div>
+
+          <img class="product-card__image" width="260" height="195" src="./img/photo-hare-mobile@1x.jpg"
+            alt="Зайчик-попрыгайчик">
           <div class="product-card__info">
             <div class="product-card__text-container">
               <h3 class="product-card__title">Зайчик-попрыгайчик</h3>
@@ -78,10 +77,9 @@
 
         <li class="products-list__item product-card">
 
-          <div class="product-card__image-wrapper">
-            <img class="product-card__image" width="260" height="195" src="./img/photo-bowl-mobile@1x.jpg"
-              alt="Корзинка для белья">
-          </div>
+
+          <img class="product-card__image" width="260" height="195" src="./img/photo-bowl-mobile@1x.jpg"
+            alt="Корзинка для белья">
           <div class="product-card__info">
             <div class="product-card__text-container">
               <h3 class="product-card__title">Корзинка для белья</h3>
@@ -99,10 +97,9 @@
 
         <li class="products-list__item product-card">
 
-          <div class="product-card__image-wrapper">
-            <img class="product-card__image" width="260" height="195" src="./img/photo-toys-mobile@1x.jpg"
-              alt="Большая корзинка для игрушек">
-          </div>
+
+          <img class="product-card__image" width="260" height="195" src="./img/photo-toys-mobile@1x.jpg"
+            alt="Большая корзинка для игрушек">
           <div class="product-card__info">
             <div class="product-card__text-container">
               <h3 class="product-card__title">Большая корзинка для игрушек</h3>
@@ -122,26 +119,19 @@
 
     <article class="how-its-done">
       <h2 class="how-its-done__title">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32"
-          xml:space="preserve">
-          <g transform="translate(0 192)">
-            <path
-              d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z" />
-          </g>
-        </svg>Процесс производства</h2>
+        Процесс производства</h2>
 
-      <div class="how-its-done__image-wrapper image image--with-player">
+      <div class="how-its-done__image-wrapper video-player">
         <img class="how-its-done__image" width="260" src="./img/video-mobile@1x.jpg" alt="Процесс производства">
+
+        <button type='button' class="video-player__button" aria-label="Включить видео"></button>
       </div>
 
       <p class="how-its-done__description">
         По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
       </p>
 
-      <div class="how-its-done__button-wrapper">
-        <a class="how-its-done__order button" href="#">Сделать заказ</a>
-      </div>
+      <a class="how-its-done__order button" href="#">Сделать заказ</a>
 
     </article>
   </main>
