--- a/source/index.html
+++ b/source/index.html
@@ -131,12 +131,12 @@
         <h2 class="reviews__title">Отзывы</h2>
 
         <ul class="reviews__list slider__list">
-          <li class="reviews__item slider__item">
+          <li class="reviews__item slider__item slider__item--active">
             <p class="reviews__description">Я молодая мама, но всё равно фотографии не набирали и близко такого
               количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
               и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__author">Анастасия Красильникова</p>
             <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
           </li>
@@ -145,7 +145,7 @@
               количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
               и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__author">Анастасия Красильникова</p>
             <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
           </li>
@@ -154,7 +154,7 @@
               количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
               и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
 
-            <span class="reviews__author">Анастасия Красильникова</span>
+            <p class="reviews__author">Анастасия Красильникова</p>
             <p class="reviews__username"><a href="#">@misssssiskras</a></p>
 
           </li>
