- contacts - tablet version

--- a/source/index.html
+++ b/source/index.html
@@ -171,21 +171,23 @@
       <b class="contacts__title">Контакты</b>
 
       <table class="contacts__table">
-        <tr>
-          <td class="contacts__text">e-mail:</td>
-          <td class="contacts__value">
-            <a class="contacts__link contacts__value--email"
-              href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-          </td>
-        </tr>
-        <tr>
-          <td class="contacts__text">адрес:</td>
-          <td class="contacts__value">
-            г. Санкт-Петербург,<br />
-            ул. Большая Конюшенная,<br />
-            д. 19/8, офис 101<br />
-          </td>
-        </tr>
+        <tbody class="contacts__table-body">
+          <tr class="contacts__row">
+            <td class="contacts__text">e-mail:</td>
+            <td class="contacts__value">
+              <a class="contacts__link contacts__link--email"
+                href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            </td>
+          </tr>
+          <tr class="contacts__row">
+            <td class="contacts__text">адрес:</td>
+            <td class="contacts__value">
+              г. Санкт-Петербург,<br />
+              ул. Большая Конюшенная,<br />
+              д. 19/8, офис 101
+            </td>
+          </tr>
+        </tbody>
       </table>
 
       <div class="contacts__map">
