- header - обертка для header на флексах

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,7 @@
 
 
     <div class="main-nav">
-      <a class="main-nav__logo header__logo">
+      <a href="/" class="main-nav__logo header__logo">
         <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
       </a>
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -48,7 +48,9 @@
       </span>
     </div>
 
-    <h1 class="header__title">Каталог товаров</h1>
+    <div class="header__title-wrapper header__title-wrapper--gray">
+      <h1 class="header__title">Каталог товаров</h1>
+    </div>
   </header>
 
   <main class="main main--catalog">
