--- a/source/index.html
+++ b/source/index.html
@@ -48,8 +48,8 @@
       </span>
     </div>
 
-    <div class="header__hero-image">
-      <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
+    <div class="header__title-wrapper header__title-wrapper--hero">
+      <h1 class="header__title">Милые штуки <br />ручной<br />работы для дома</h1>
     </div>
 
     <ul class="header__categories categories">
