- order-form - styling WIP

--- a/source/form.html
+++ b/source/form.html
@@ -66,71 +66,72 @@
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Тип</legend>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" value="Аксессуар для интерьера" type="radio" name="type" id="accessories"
-            checked>
-          <label class="order-form__label" for="accessories">Аксессуар для интерьера</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" value="Детская игрушка" type="radio" name="type" id="toy">
-          <label class="order-form__label" for="toy">Детская игрушка</label>
+        <div class="order-form__inputs-wrapper">
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" value="Аксессуар для интерьера" type="radio" name="type" checked>
+            Аксессуар для интерьера
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" value="Детская игрушка" type="radio" name="type">
+            Детская игрушка
+          </label>
         </div>
       </fieldset>
 
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Цвет</legend>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="Белый" id="white" checked>
-          <label class="order-form__label" for="white">Белый</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="Серый" id="gray" checked>
-          <label class="order-form__label" for="gray">Серый</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="«Тиффани»" id="tiffany">
-          <label class="order-form__label" for="tiffany">«Тиффани»</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="Черный" id="black">
-          <label class="order-form__label" for="black">Черный</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="Розовый" id="pink">
-          <label class="order-form__label" for="pink">Розовый</label>
-        </div>
-        <div class="order-form__input-wrapper">
-          <input class="order-form__input" type="checkbox" name="color" value="Оранжевый" id="orange">
-          <label class="order-form__label" for="orange">Оранжевый</label>
-        </div>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="Белый" checked>
+          Белый
+        </label>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="Серый" checked>
+          Серый
+        </label>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="«Тиффани»">
+          «Тиффани»
+        </label>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="Черный">
+          Черный
+        </label>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="Розовый">
+          Розовый
+        </label>
+        <label class="order-form__input-container order-form__label">
+          <input class="order-form__input" type="checkbox" name="color" value="Оранжевый">
+          Оранжевый
+        </label>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">ФИО</legend>
-        <div class="order-form__input-wrapper">
-          <label class="order-form__label" for="name">Имя:</label>
+        <label class="order-form__input-container order-form__label">
+          Имя:
           <input class="order-form__input" placeholder="Введите ваше имя*" type="text" name="name" id="name">
-        </div>
-        <div class="order-form__input-wrapper">
-          <label class="order-form__label" for="surname">Фамилия:</label>
+        </label>
+        <label class="order-form__input-container order-form__label">
+          Фамилия:
           <input class="order-form__input" placeholder="Укажите фамилию*" type="text" name="surname" id="surname">
-        </div>
-        <div class="order-form__input-wrapper">
-          <label class="order-form__label" for="patronymic">Отчество:</label>
+        </label>
+        <label class="order-form__input-container order-form__label">
+          Отчество:
           <input class="order-form__input" placeholder="Отчество, если желаете" type="text" name="patronymic"
             id="patronymic">
-        </div>
+        </label>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Тел</legend>
-        <input class="order-form__input" placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" id="phone" name="phone">
+        <input class="order-form__input" placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" name="phone">
       </fieldset>
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">E-mail</legend>
-        <input class="order-form__input" placeholder="Ваш Email*" type="text" name="email" id="email">
+        <input class="order-form__input" placeholder="Ваш Email*" type="text" name="email">
       </fieldset>
 
       <fieldset class="order-form__fieldset">
