--- a/source/form.html
+++ b/source/form.html
@@ -81,30 +81,33 @@
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Цвет</legend>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="Белый" checked>
-          Белый
-        </label>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="Серый" checked>
-          Серый
-        </label>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="«Тиффани»">
-          «Тиффани»
-        </label>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="Черный">
-          Черный
-        </label>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="Розовый">
-          Розовый
-        </label>
-        <label class="order-form__input-container order-form__label">
-          <input class="order-form__input" type="checkbox" name="color" value="Оранжевый">
-          Оранжевый
-        </label>
+
+        <div class="order-form__input-container order-form__input-container--horizontal">
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="Белый" checked>
+            Белый
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="Серый" checked>
+            Серый
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="«Тиффани»">
+            «Тиффани»
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="Черный">
+            Черный
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="Розовый">
+            Розовый
+          </label>
+          <label class="order-form__input-container order-form__label">
+            <input class="order-form__input" type="checkbox" name="color" value="Оранжевый">
+            Оранжевый
+          </label>
+        </div>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
@@ -125,19 +128,25 @@
       </fieldset>
 
       <fieldset class="order-form__fieldset">
-        <legend class="order-form__legend">Тел</legend>
-        <input class="order-form__input" placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" name="phone">
+        <div class="order-form__input-container">
+          <legend class="order-form__legend">Тел</legend>
+          <input class="order-form__input" placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" name="phone">
+        </div>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
-        <legend class="order-form__legend">E-mail</legend>
-        <input class="order-form__input" placeholder="Ваш Email*" type="text" name="email">
+        <div class="order-form__input-container">
+          <legend class="order-form__legend">E-mail</legend>
+          <input class="order-form__input" placeholder="Ваш Email*" type="text" name="email">
+        </div>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
-        <legend class="order-form__legend">Доп</legend>
-        <textarea class="order-form__textarea" placeholder="Опишите все ваши пожелания к заказу"
-          name="comment"></textarea>
+        <div class="order-form__input-container">
+          <legend class="order-form__legend">Доп</legend>
+          <textarea class="order-form__textarea" placeholder="Опишите все ваши пожелания к заказу"
+            name="comment"></textarea>
+        </div>
       </fieldset>
 
       <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
