- order-form - tablet + desktop

--- a/source/form.html
+++ b/source/form.html
@@ -149,11 +149,16 @@
         </div>
       </fieldset>
 
-      <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
+      <div class="order-form__footer">
+        <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
 
-      <button class="order-form__submit button button--center" type="submit">
-        Отправить заказ
-      </button>
+        <button class="order-form__submit button button--center" type="submit">
+          Отправить заказ
+        </button>
+
+      </div>
+
+
     </form>
 
 
