--- a/source/index.html
+++ b/source/index.html
@@ -49,17 +49,16 @@
     </div>
 
     <div class="header__title-wrapper header__title-wrapper--hero">
-      <h1 class="header__title">Милые штуки <br />ручной<br />работы для дома</h1>
+      <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
+      <ul class="header__categories categories">
+        <li class="categories__item categories__item--interior">
+          <a href="#">Предметы интерьера</a>
+        </li>
+        <li class="categories__item categories__item--toy categories__item--dark">
+          <a href="#">Детские игрушки</a>
+        </li>
+      </ul>
     </div>
-
-    <ul class="header__categories categories">
-      <li class="categories__item">
-        <a href="#">Предметы интерьера</a>
-      </li>
-      <li class="categories__item categories__item--dark">
-        <a href="#">Детские игрушки</a>
-      </li>
-    </ul>
   </header>
 
   <main class="main">
@@ -116,11 +115,11 @@
       </h2>
 
       <ul class="features__list">
-        <li class="features__item features__item--eco">Экологически чистые материалы</li>
-        <li class="features__item features__item--scandinavian">Скандинавский стиль по российской цене</li>
-        <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
-        <li class="features__item features__item--handmade">Связано вручную с любовью и умилением</li>
-        <li class="features__item features__item--local-support">Поддержка отечественного производителя</li>
+        <li class="features__item features__item--eco">Экологически <br/>чистые материалы</li>
+        <li class="features__item features__item--scandinavian">Скандинавский стиль <br/>по российской цене</li>
+        <li class="features__item features__item--likes">Увеличивает лайки <br/>на фотографиях</li>
+        <li class="features__item features__item--handmade">Связано вручную с <br/>любовью и умилением</li>
+        <li class="features__item features__item--local-support">Поддержка отечественного <br/>производителя</li>
         <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
       </ul>
 
@@ -229,7 +228,7 @@
     <div class="footer__copyright copyright">
       <b class="copyright__text">Разработано</b>
       <a class="copyright__link" aria-label="HTML Academy" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="#63d1bb" viewBox="0 0 60 60">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="#63d1bb" viewBox="0 0 60 60" width="27px" height="34px">
           <path
             d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
         </svg>
