index.html - desktop WIP

--- a/source/index.html
+++ b/source/index.html
@@ -23,17 +23,24 @@
         <li class="main-nav__item main-nav__item--catalog">
           <a href="catalog.html">Каталог товаров</a>
         </li>
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--form">
           <a href="form.html">Вязание на заказ</a>
         </li>
       </ul>
       <ul class="main-nav__list main-nav__list--search-checkout">
         <li class="main-nav__item main-nav__item--search">
-            <svg xmlns="http://www.w3.org/2000/svg" width="17.6" height="17.6" viewbox="-0.8 -0.8 17.6 17.6"><path fill="#231F20" d="M16.47 14.93l-3.415-3.415A7.67 7.67 0 0014.6 6.899C14.6 2.646 11.153-.8 6.9-.8S-.8 2.646-.8 6.899s3.446 7.7 7.699 7.7c1.734 0 3.326-.58 4.613-1.546l3.417 3.416c.203.202.418.33.771.33a1.1 1.1 0 001.1-1.1c0-.24-.061-.499-.33-.769zM1.399 6.899a5.5 5.5 0 1111 0c0 3.038-2.462 5.5-5.5 5.5s-5.5-2.461-5.5-5.5z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="17.6" height="17.6" viewbox="-0.8 -0.8 17.6 17.6">
+            <path fill="#231F20"
+              d="M16.47 14.93l-3.415-3.415A7.67 7.67 0 0014.6 6.899C14.6 2.646 11.153-.8 6.9-.8S-.8 2.646-.8 6.899s3.446 7.7 7.699 7.7c1.734 0 3.326-.58 4.613-1.546l3.417 3.416c.203.202.418.33.771.33a1.1 1.1 0 001.1-1.1c0-.24-.061-.499-.33-.769zM1.399 6.899a5.5 5.5 0 1111 0c0 3.038-2.462 5.5-5.5 5.5s-5.5-2.461-5.5-5.5z" />
+            </svg>
           <a href="#">Поиск по сайту</a>
         </li>
         <li class="main-nav__item main-nav__item--cart">
-            <svg class="main-nav__icon main-nav__icon--cart" height="18.849" viewbox="264.205 370.961 20.294 18.849" width="20.294" xmlns="http://www.w3.org/2000/svg"><path d="m283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0 -1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0 -1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0 -.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0 -.316-.596l.854-2.991h.157a.75.75 0 1 0 -.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881zm1.653-5.785h-13.739l-.81-2.836h15.359z" fill="#231f20"/></svg>
+          <svg class="main-nav__icon main-nav__icon--cart" height="18.849" viewbox="264.205 370.961 20.294 18.849"
+            width="20.294" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="m283.75 378.19h-3.151l-3.407-6.814a.75.75 0 1 0 -1.341.671l3.071 6.143h-9.138l3.072-6.143a.75.75 0 0 0 -1.341-.671l-3.407 6.814h-3.151a.75.75 0 0 0 0 1.5h.157l.855 2.991a.737.737 0 0 0 -.316.595c0 .396.309.71.697.739l1.656 5.795h12.697l1.656-5.795a.745.745 0 0 0 .698-.739.738.738 0 0 0 -.316-.596l.854-2.991h.157a.75.75 0 1 0 -.002-1.499zm-4.181 10.121h-10.433l-1.224-4.284h12.881zm1.653-5.785h-13.739l-.81-2.836h15.359z"
+              fill="#231f20" /></svg>
           <a href="#">Корзина: пока пуста</a>
         </li>
       </ul>
@@ -117,11 +124,11 @@
       </h2>
 
       <ul class="features__list">
-        <li class="features__item features__item--eco">Экологически <br/>чистые материалы</li>
-        <li class="features__item features__item--scandinavian">Скандинавский стиль <br/>по российской цене</li>
-        <li class="features__item features__item--likes">Увеличивает лайки <br/>на фотографиях</li>
-        <li class="features__item features__item--handmade">Связано вручную с <br/>любовью и умилением</li>
-        <li class="features__item features__item--local-support">Поддержка отечественного <br/>производителя</li>
+        <li class="features__item features__item--eco">Экологически <br />чистые материалы</li>
+        <li class="features__item features__item--scandinavian">Скандинавский стиль <br />по российской цене</li>
+        <li class="features__item features__item--likes">Увеличивает лайки <br />на фотографиях</li>
+        <li class="features__item features__item--handmade">Связано вручную с <br />любовью и умилением</li>
+        <li class="features__item features__item--local-support">Поддержка отечественного <br />производителя</li>
         <li class="features__item features__item--packing">Поставляется в подарочной упаковке</li>
       </ul>
 
