--- a/source/index.html
+++ b/source/index.html
@@ -45,10 +45,10 @@
         </li>
       </ul>
       <ul class="main-nav__list main-nav__list--arrivals-sale">
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--new-arrivals">
           <a href="#">Новые поступления</a>
         </li>
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--sale">
           <a href="">Распродажа</a>
         </li>
       </ul>
