index.html - desktop WIP

--- a/source/index.html
+++ b/source/index.html
@@ -84,35 +84,21 @@
         </p>
         <table cell class="product-of-week__stats product-stats">
           <tr>
-            <td class="product-stats__title">
-              Цвет:
-            </td>
-            <td class="product-stats__value">
-              «Тиффани»/серый
-            </td>
+            <td class="product-stats__title">Цвет:</td>
+            <td class="product-stats__value">«Тиффани»/серый</td>
           </tr>
           <tr>
-            <td class="product-stats__title">
-              Диаметр:
-            </td>
-            <td class="product-stats__value">
-              25 см
-            </td>
+            <td class="product-stats__title">Диаметр:</td>
+            <td class="product-stats__value">25 см</td>
           </tr>
           <tr>
-            <td class="product-stats__title">
-              Высота:
-            </td>
-            <td class="product-stats__value">
-              15 см
-            </td>
+            <td class="product-stats__title">Высота:</td>
+            <td class="product-stats__value">15 см</td>
           </tr>
         </table>
         <img src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели"
           class="product-of-week__image">
-        <span class="product-of-week__price">
-          Цена: 990 руб.
-        </span>
+        <span class="product-of-week__price">Цена: 990 руб.</span>
         <a class="product-of-week__buy button" href="form.html">Заказать</a>
       </div>
     </article>
