index.html - header fixes

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="header__title-wrapper header__title-wrapper--hero">
-      <h1 class="header__title header__title--hero">Милые штуки <br />ручной<br />работы для дома</h1>
+      <h1 class="header__title header__title--hero">Милые штуки ручной <br/>работы&nbsp;для дома</h1>
       <ul class="header__categories categories">
         <li class="categories__item categories__item--interior">
           <a href="#">Предметы интерьера</a>
