- index, catalog, form.html - main-nav__toggle с классом closed - main-nav - меняет иконку при закрытии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -189,6 +189,7 @@
       mainNavLists.forEach(list => {
         var isClosed = list.classList.contains('main-nav__list--closed')
         list.classList.toggle('main-nav__list--closed', !isClosed);
+        navToggle.classList.toggle('main-nav__toggle--closed', !isClosed);
       })
     });
   </script>
