--- a/source/form.html
+++ b/source/form.html
@@ -197,6 +197,18 @@
       </a>
     </div>
   </footer>
+  <script>
+    var mainNavLists = document.querySelectorAll('.main-nav__list');
+    var navToggle = document.querySelector('.main-nav__toggle');
+
+    navToggle.addEventListener('click', function () {
+      mainNavLists.forEach(list => {
+        var isClosed = list.classList.contains('main-nav__list--closed')
+        list.classList.toggle('main-nav__list--closed', !isClosed);
+        navToggle.classList.toggle('main-nav__toggle--closed', !isClosed);
+      })
+    });
+  </script>
 </body>
 
 </html>
