form.html - mobile - WIP

--- a/source/form.html
+++ b/source/form.html
@@ -67,12 +67,14 @@
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Тип</legend>
         <div class="order-form__inputs-wrapper">
-          <label class="order-form__input-container order-form__label">
+          <label class="order-form__label">
             <input class="order-form__input" value="Аксессуар для интерьера" type="radio" name="type" checked>
+            <span class="order-form__radio"></span>
             Аксессуар для интерьера
           </label>
-          <label class="order-form__input-container order-form__label">
+          <label class="order-form__label">
             <input class="order-form__input" value="Детская игрушка" type="radio" name="type">
+            <span class="order-form__radio"></span>
             Детская игрушка
           </label>
         </div>
@@ -82,7 +84,7 @@
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">Цвет</legend>
 
-        <div class="order-form__input-container order-form__input-container--horizontal">
+        <div class="order-form__input-group">
           <label class="order-form__input-container order-form__label">
             <input class="order-form__input" type="checkbox" name="color" value="Белый" checked>
             Белый
