--- a/source/form.html
+++ b/source/form.html
@@ -68,12 +68,13 @@
         <legend class="order-form__legend">Тип</legend>
         <div class="order-form__inputs-wrapper">
           <label class="order-form__label">
-            <input class="order-form__input" value="Аксессуар для интерьера" type="radio" name="type" checked>
+            <input class="order-form__input order-form__input--radio" value="Аксессуар для интерьера" type="radio"
+              name="type" checked>
             <span class="order-form__radio"></span>
             Аксессуар для интерьера
           </label>
           <label class="order-form__label">
-            <input class="order-form__input" value="Детская игрушка" type="radio" name="type">
+            <input class="order-form__input order-form__input--radio" value="Детская игрушка" type="radio" name="type">
             <span class="order-form__radio"></span>
             Детская игрушка
           </label>
@@ -85,28 +86,36 @@
         <legend class="order-form__legend">Цвет</legend>
 
         <div class="order-form__input-group">
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="Белый" checked>
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="Белый"
+              checked>
+            <span class="order-form__checkbox"></span>
             Белый
           </label>
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="Серый" checked>
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="Серый"
+              checked>
+            <span class="order-form__checkbox"></span>
             Серый
           </label>
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="«Тиффани»">
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="«Тиффани»">
+            <span class="order-form__checkbox"></span>
             «Тиффани»
           </label>
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="Черный">
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="Черный">
+            <span class="order-form__checkbox"></span>
             Черный
           </label>
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="Розовый">
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="Розовый">
+            <span class="order-form__checkbox"></span>
             Розовый
           </label>
-          <label class="order-form__input-container order-form__label">
-            <input class="order-form__input" type="checkbox" name="color" value="Оранжевый">
+          <label class="order-form__label order-form__label--checkbox">
+            <input class="order-form__input order-form__input--checkbox" type="checkbox" name="color" value="Оранжевый">
+            <span class="order-form__checkbox"></span>
             Оранжевый
           </label>
         </div>
@@ -114,36 +123,50 @@
 
       <fieldset class="order-form__fieldset">
         <legend class="order-form__legend">ФИО</legend>
-        <label class="order-form__input-container order-form__label">
+        <label class="order-form__label order-form__label--text">
           Имя:
-          <input class="order-form__input" placeholder="Введите ваше имя*" type="text" name="name" id="name">
+          <input class="order-form__input order-form__input--text" placeholder="Введите ваше имя*" type="text"
+            name="name">
         </label>
-        <label class="order-form__input-container order-form__label">
+        <label class="order-form__label order-form__label--text">
           Фамилия:
-          <input class="order-form__input" placeholder="Укажите фамилию*" type="text" name="surname" id="surname">
+          <input class="order-form__input order-form__input--text" placeholder="Укажите фамилию*" type="text"
+            name="surname">
         </label>
-        <label class="order-form__input-container order-form__label">
+        <label class="order-form__label order-form__label--text">
           Отчество:
-          <input class="order-form__input" placeholder="Отчество, если желаете" type="text" name="patronymic"
-            id="patronymic">
+          <input class="order-form__input order-form__input--text" placeholder="Отчество, если желаете" type="text"
+            name="patronymic">
         </label>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
-        <div class="order-form__input-container">
-          <legend class="order-form__legend">Тел</legend>
-          <input class="order-form__input" placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" name="phone">
+        <legend class="order-form__legend order-form__legend--small-margin">Тел</legend>
+        <div class="order-form__input-wrapper">
+          <input class="order-form__input order-form__input--text order-form__input--tel"
+            placeholder="+7 ХХХ ХХХ ХХ ХХ*" type="tel" name="phone">
+          <svg class="order-form__input-icon" xmlns="http://www.w3.org/2000/svg" width="24.829" height="24.333">
+            <path
+              d="M17.321 24.333h-1.115c-4.904-.58-8.497-2.857-11.11-5.772C2.473 15.637.402 11.875 0 6.817V5.459c.091-.921.544-1.55 1.067-2.086.65-.666 1.63-1.522 2.522-1.553.659-.022 1.78.451 2.232 1.066.388.53.595 1.59.775 2.378.185.797.6 1.95.485 2.717-.176 1.196-1.764 1.703-2.231 2.572 1.551 3.721 4.089 6.456 7.472 8.345.847-.465 1.595-1.864 2.767-1.892.428-.012.972.209 1.406.34.477.143.891.326 1.311.484.705.266 1.957.621 2.378 1.213.433.61.681 1.608.581 2.231-.194 1.234-2.227 2.603-3.444 3.059zM12.529 1.528c5.949 0 10.771 4.822 10.771 10.771h1.529C24.829 5.507 19.323 0 12.529 0v1.528z" />
+            <path
+              d="M12.529 9.327v1.552a1.42 1.42 0 0 1 1.421 1.42h1.553a2.973 2.973 0 0 0-2.974-2.972zm0-3.081a6.054 6.054 0 0 1 6.056 6.054h1.588a7.642 7.642 0 0 0-7.644-7.641v1.587z" />
+          </svg>
         </div>
       </fieldset>
 
       <fieldset class="order-form__fieldset">
-        <div class="order-form__input-container">
-          <legend class="order-form__legend">E-mail</legend>
-          <input class="order-form__input" placeholder="Ваш Email*" type="text" name="email">
+        <legend class="order-form__legend order-form__legend--small-margin">E-mail</legend>
+        <div class="order-form__input-wrapper">
+          <input class="order-form__input order-form__input--text order-form__input--email" placeholder="Ваш Email*"
+            type="email" name="email">
+          <svg class="order-form__input-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32">
+            <path fill="#333"
+              d="M28 5H4a4 4 0 0 0-4 4v13a4 4 0 0 0 4 4h24a4 4 0 0 0 4-4V9a4 4 0 0 0-4-4zM2 10.25l6.999 5.25L2 20.75v-10.5zM30 22c0 1.104-.898 2-2 2H4c-1.103 0-2-.896-2-2l7.832-5.875 4.368 3.277a3 3 0 0 0 3.599 0l4.369-3.277L30 22zm0-1.25l-7-5.25 7-5.25v10.5zm-12.801-2.148c-.35.263-.763.4-1.199.4s-.851-.139-1.2-.4L10.665 15.5l-.833-.625L2 9.001V9c0-1.103.897-2 2-2h24c1.102 0 2 .897 2 2l-12.801 9.602z" />
+          </svg>
         </div>
       </fieldset>
 
-      <fieldset class="order-form__fieldset">
+      <fieldset class="order-form__fieldset order-form__fieldset--small-margin">
         <div class="order-form__input-container">
           <legend class="order-form__legend">Доп</legend>
           <textarea class="order-form__textarea" placeholder="Опишите все ваши пожелания к заказу"
@@ -152,7 +175,7 @@
       </fieldset>
 
       <div class="order-form__footer">
-        <small class="order-form__note"><sup>*</sup>Поля обязательны для заполнения</small>
+        <small class="order-form__small"><sup>*</sup>Поля обязательны для заполнения</small>
 
         <button class="order-form__submit button button--center" type="submit">
           Отправить заказ
@@ -203,13 +226,21 @@
     var mainNavLists = document.querySelectorAll('.main-nav__list');
     var navToggle = document.querySelector('.main-nav__toggle');
 
-    navToggle.addEventListener('click', function () {
+    var toggleMainNavClosed = function () {
       mainNavLists.forEach(list => {
         var isClosed = list.classList.contains('main-nav__list--closed')
         list.classList.toggle('main-nav__list--closed', !isClosed);
-        navToggle.classList.toggle('main-nav__toggle--closed', !isClosed);
+        navToggle.classList.toggle('main-nav__toggle--open', !isClosed);
       })
-    });
+    }
+
+    toggleMainNavClosed()
+
+    navToggle.addEventListener('click', toggleMainNavClosed);
+
+
+
+
   </script>
 </body>
 
