menu.js - отдельный js для меню

--- a/source/form.html
+++ b/source/form.html
@@ -222,26 +222,7 @@
       </a>
     </div>
   </footer>
-  <script>
-    var mainNavLists = document.querySelectorAll('.main-nav__list');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    var toggleMainNavClosed = function () {
-      mainNavLists.forEach(list => {
-        var isClosed = list.classList.contains('main-nav__list--closed')
-        list.classList.toggle('main-nav__list--closed', !isClosed);
-        navToggle.classList.toggle('main-nav__toggle--open', !isClosed);
-      })
-    }
-
-    toggleMainNavClosed()
-
-    navToggle.addEventListener('click', toggleMainNavClosed);
-
-
-
-
-  </script>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
