--- a/source/catalog.html
+++ b/source/catalog.html
@@ -181,18 +181,7 @@
       </a>
     </div>
   </footer>
-  <script>
-    var mainNavLists = document.querySelectorAll('.main-nav__list');
-    var navToggle = document.querySelector('.main-nav__toggle');
-
-    navToggle.addEventListener('click', function () {
-      mainNavLists.forEach(list => {
-        var isClosed = list.classList.contains('main-nav__list--closed')
-        list.classList.toggle('main-nav__list--closed', !isClosed);
-        navToggle.classList.toggle('main-nav__toggle--closed', !isClosed);
-      })
-    });
-  </script>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
