--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="./css/style.css">
+
+  <script>document.createElement("picture");</script>
+  <script src="js/picturefill.js" async></script>
 
   <title>HTML Academy: Мишка - Вязание на заказ</title>
 </head>
@@ -14,10 +18,17 @@
 
 
     <div class="main-nav">
+
       <a class="main-nav__logo header__logo">
-        <img class="header__logo-image" src="./img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Мишка">
+        </picture>
       </a>
+
       <button class="main-nav__toggle" type="button">Открыть меню</button>
+
       <ul class="main-nav__list main-nav__list--catalog-form">
         <li class="main-nav__item main-nav__item--catalog">
           <a href="catalog.html">Каталог товаров</a>
@@ -26,7 +37,9 @@
           <a href="form.html">Вязание на заказ</a>
         </li>
       </ul>
+
       <ul class="main-nav__list main-nav__list--search-checkout">
+
         <li class="main-nav__item main-nav__item--search">
           <svg class="main-nav__icon main-nav__icon--search" xmlns="http://www.w3.org/2000/svg" width="17.6"
             height="17.6" viewbox="-0.8 -0.8 17.6 17.6">
@@ -35,6 +48,7 @@
           </svg>
           <a href="#">Поиск по сайту</a>
         </li>
+
         <li class="main-nav__item main-nav__item--cart">
           <svg class="main-nav__icon main-nav__icon--cart" height="18.849" viewbox="264.205 370.961 20.294 18.849"
             width="20.294" xmlns="http://www.w3.org/2000/svg">
@@ -43,7 +57,9 @@
               fill="#231f20" /></svg>
           <a href="#">Корзина: пока пуста</a>
         </li>
+
       </ul>
+
       <ul class="main-nav__list main-nav__list--arrivals-sale">
         <li class="main-nav__item main-nav__item--new-arrivals">
           <a href="#">Новые поступления</a>
@@ -52,9 +68,11 @@
           <a href="">Распродажа</a>
         </li>
       </ul>
+
       <span class="main-nav__item main-nav__item--free-shipping">
         Бесплатная доставка по России
       </span>
+
     </div>
 
     <div class="header__title-wrapper header__title-wrapper--gray">
