--- a/source/form.html
+++ b/source/form.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="./css/style.css">
+
   <script>document.createElement("picture");</script>
-  <script src="js/picturefill.js" async></script>
+  <script src="js/picturefill.min.js" async></script>
+
   <title>HTML Academy: Мишка - Вязание на заказ</title>
 </head>
 
@@ -271,6 +274,8 @@
     </div>
   </footer>
   <script src="./js/menu.js"></script>
+  <script src="js/svg4everybody.min.js"></script>
+  <script>svg4everybody();</script>
 </body>
 
 </html>
