--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css/style.css">
-  <script>document.createElement("picture");</script>
-  <script src="js/picturefill.js" async></script>
+
   <title>HTML Academy: Мишка</title>
+
+  <link rel="stylesheet" href="./css/style.css">
+
+  <script>document.createElement("picture");</script>
+  <script src="js/picturefill.min.js" async></script>
 
 </head>
 
@@ -106,9 +109,15 @@
         </table>
 
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+          <source media="(min-width: 1440px)"
+            srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x">
+          <source media="(min-width: 768px)"
+            srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-tablet@2x.webp 2x">
+          <source media="(min-width: 1440px)"
+            srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-          <img class="product-of-week__image" src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px" alt="Товар недели">
+          <img class="product-of-week__image" src="./img/triple-set-mobile@1x.jpg" width="260px" height="315px"
+            alt="Товар недели">
         </picture>
         <span class="product-of-week__price">Цена: 990 руб.</span>
         <a class="product-of-week__buy button" href="form.html">Заказать</a>
@@ -244,6 +253,8 @@
     </div>
   </footer>
   <script src="./js/menu.js"></script>
+  <script src="js/svg4everybody.min.js"></script>
+  <script>svg4everybody();</script>
 </body>
 
 </html>
