--- a/source/index.html
+++ b/source/index.html
@@ -254,7 +254,7 @@
       </a>
     </div>
   </footer>
-  <script src="./js/menu.js"></script>
+  <script src="./js/script.js"></script>
   <script src="js/svg4everybody.min.js"></script>
   <script>svg4everybody();</script>
 </body>
